style.css
.container-fluid{
    background-color: rgb(10,25,47);
    width: 100%;
}
#aa{
  color: rgb(202,212,244);
  text-transform: uppercase;
  font-size: .8rem;
  font-weight: bold;
}
#aa:hover{
  color: rgb(95,241,208);
}

#n1 #l1 {
  list-style: none;
  display: inline-block;
  margin: 0 25px;
  position: relative;
}
#n1 #l1::after {
  content: '';
  height: 3px;
  width: 0;
  background: rgb(202,212,244);
  position: absolute;
  left: 0;
  bottom: -3px;
  transition: 0.5s;
}

#n1 #l1:hover:after {
  width: 100%;
}
.sidenav a {
  position: absolute;
  right: -100px;
  transition: 0.5s;
  width: 155px;
  display: flex;
  justify-content: space-between;
  padding: 15px;
  text-decoration: none;
  font-size: 20px;
  color: rgb(10,25,47);
  border-radius: 30px 0 0 30px;
}
.fa-brands{
  padding-left: 5px;
  padding-top: 5px;
}
i{
  color: rgb(10,25,47);
}

.sidenav a:hover {
  right: 0;
}

#facebook {
  top: 200px;
  background-color: rgb(95,241,208);
  color: rgb(10,25,47);
  
}

#linkedin {
  top: 270px;
  background-color: rgb(95,241,208);
  color: rgb(10,25,47);
}

#discord {
  top: 340px;
  background-color: rgb(95,241,208);
  color: rgb(10,25,47);
}

#youtube {
  top: 410px;
  background-color: rgb(95,241,208);
  color: rgb(10,25,47);
}
#hero1{
  color: rgb(202,212,244);
  transition: .8s;
}
#hero1:hover{
  color: yellowgreen;
}
#devep{
  color: rgb(95,241,208);
  transition: .8s;
}
#devep:hover{
  color: yellowgreen;
}
#me1{
  font-size: 2rem;
  color:  rgb(95,241,208);
  transition: .8s;
}
#me1:hover{
  font-size: 5rem;
  color: yellowgreen;

}
#pp{
  color: rgb(202,212,244);
  font-size: 3rem;
  display: flex;
  justify-content: center;
  transition: .5s;
}
#pp:hover{
  font-size: 8rem;
  color: rgb(95,241,208);

}
.ff1{
  color: rgb(95,241,208);
  margin-top: 100px;
}
#fp1{
  color: rgb(95,241,208);
}
.gm1{
  font-size: 1rem;
  transition: .5s;
}

.gm1:hover{
  font-size: 5rem;
}
#button77 {
  width: 200px;
  padding: 15px;
  text-align: center;
  margin: 20px 10px;
  border-radius: 25px;
  font-weight: bold;
  border: 2px solid #009688;
  background: transparent;
  color: #fff;
  cursor: pointer;
  position: 0;

}
#span11{
 
  position: absolute;
  left: 0;
  bottom: 0;
  z-index: -1;
  transition: 0.5s;
}
#span11 > a{
  text-decoration: none;
}
#button77:hover span{
  width: 100%;
}
#button77:hover{
  border: none;
  background: #009688;
  color: rgb(10,25,47);

}
#skills-offer{
  color: rgb(95,241,208);
  font-size: 3rem;
  display: flex;
  justify-content: center;
  transition: .8s;
}
#skills-offer:hover{
  font-size: 5rem;
  color: yellowgreen;
}
#f-p{
  color: rgb(95,241,208); 
  transition: .8s;
}
#f-p:hover{
  font-size: 5rem;
  color: yellowgreen;
}
#projec{
  color: rgb(95,241,208); 
  transition: .8s;
}
#project:hover{
  color: yellowgreen;
}
#wwdd{
  color: rgb(202,212,244);
  transition: .8s;
}
#wwdd:hover{
  color: rgb(95,241,208); 
}
#icon-1{
  color: rgb(95,241,208);
  transition: .8s;
}
#icon-1:hover{
  color: yellowgreen;
}

.flip-card {
  background-color: transparent;
  width: 100%;
  height: 345px;
  perspective: 1000px;
}

.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.6s;
  transform-style: preserve-3d;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}

.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front, .flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.flip-card-front {
  background-color: #bbb;
  color: black;
}

.flip-card-back {
  background-color: #009688;
  color: white;
  transform: rotateY(180deg);
}

@media (min-width: 768px) {
  .bd-placeholder-img-lg {
    font-size: 3.5rem; 
  }
}

